# monocable

./: .gitignore  MF_AUTOCAD.dwg  MONOFUNI.xls  MONOFUNI_IT.xls  MONOFUNI_UK.XLS  README.md  analyzed_vba.txt  pyproject.toml  requirements.txt
MONOFUNI/: Ctls  Workbook  [5]DocumentSummaryInformation  [5]SummaryInformation
MONOFUNI/_VBA_PROJECT_CUR/: PROJECT  PROJECTwm
SOSTEGNI_MONOFUNE/: help_Foglio_InputDati.htm
SOSTEGNI_MONOFUNE/TEORIA/: VERIFICA_FUSTO.doc
SOSTEGNI_MONOFUNE/help_Foglio_InputDati_file/: filelist.xml
SOSTEGNI_MONOFUNE/help_dm96/: index.htm
VBA_Export_20260720_120646/: project_manifest.txt  references.txt
VBA_Export_20260720_120646/ClassModules/: OS.cls
VBA_Export_20260720_120646/ExcelObjects/: Foglio1.cls  Foglio10.cls  Foglio11.cls  Foglio12.cls  Foglio121.cls  Foglio13.cls  Foglio14.cls  Foglio15.cls  Foglio16.cls  Foglio2.cls  Foglio22.cls  Foglio23.cls  Foglio24.cls  Foglio3.cls  Foglio4.cls  Foglio5.cls  Foglio6.cls  Foglio7.cls  (+5 more)
docs/: migration_code_flow.md  verification_workflow.md  windows_distribution.md
packaging/: pyinstaller_entry.py  winsif_mon.spec
prompt/: 01-normal-mode-parity.md  02-fix-workbook-trace-overread.md  03-faithful-store05-analisi.md  04-complete-hydraulic-final.md  05-anchored-parity-refinement.md  06-wire-result-pages-native-output.md  07-parity-complete-family-tracking.md
tests/: test_charting.py  test_friction_and_results.py  test_geometry.py  test_hydraulic.py  test_remaining_results.py  test_runtime_resources.py  test_solver.py  test_ui_smoke.py  test_verification.py  test_workbook_defaults.py
(+150 files in other folders)
